--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <h2>this is conflict</h2>
+    <h2>this is conflict from branch</h2>
 </body>
 </html>
