create conflict in remote

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
 
     
-    <h2>this is conflict from master</h2>
+    <h2>this is conflict from remote</h2>
 
-    <h2>this is conflict from branch</h2>
 
 </body>
 </html>
