--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 
     
-    <h2>this is conflict from master</h2>
+    <h2>this is conflict from local</h2>
 
-    <h2>this is conflict from branch</h2>
+    
 
 </body>
 </html>
